--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
@@ -3,5 +3,8 @@
 
   .module-navigation {
     background-color: cornflowerblue;
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
   }
 }
