added color palette as scss variables

--- a/whatisvotinglike.ui/src/styles/_variables.scss
+++ b/whatisvotinglike.ui/src/styles/_variables.scss
@@ -1,1 +1,15 @@
 $color1: darkgrey; 
+
+$background: #02203a;
+$border: #17314a;
+$text: #a7b8c8;
+
+$purple: #5f63eb;
+$dark-purple: #573e5c;
+$green: #81b37e;
+$teal: #4da599;
+$orange: #b38b43;
+
+$answer-green: #038626;
+$answer-red: #b14a4e;
+$button-blue: #174dc9;
