--- a/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
+++ b/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
@@ -1,8 +1,13 @@
+@import '../../../styles/variables';
+
 .Home {
   display: block;
+  color: $text;
+  background-color: $background;
+  height: 100vh;
 
   .module-navigation {
-    background-color: cornflowerblue;
+    background-color: $border;
     position: absolute;
     bottom: 2rem;
     width: 100%;
