--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
@@ -1,8 +1,11 @@
+@import '../../../styles/variables';
+
 .Conclusion {
   display: block;
+  color: $text;
 
   .module-navigation {
-    background-color: cornflowerblue;
+    background-color: $border;
     position: absolute;
     bottom: 2rem;
     width: 100%;
