updated single Training Module card placement and styling

--- a/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
+++ b/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
@@ -6,6 +6,12 @@
   background-color: $background;
   height: 100vh;
 
+  .module-cards-container {
+    background-color: $purple;
+    display: flex;
+    justify-content: center;
+  }
+
   .module-navigation {
     background-color: $border;
     position: absolute;
