added display flex to core content in Intro component

--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
@@ -4,6 +4,10 @@
   display: block;
   color: $text;
 
+  .intro-content-container {
+    display: flex;
+  }
+
   .module-navigation {
     background-color: $border;
     position: absolute;
