basic styling for two column layout

--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/CheckIn/CheckIn.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/CheckIn/CheckIn.scss
@@ -5,6 +5,15 @@
   color: $text;
   background-color: $background;
   height: 100vh;
+  
+  .checkin-content-container {
+    display: flex;
+    justify-content: space-around;
+
+    .photo-id-container {
+      align-self: center;
+    }
+  }
 
   .module-navigation {
     background-color: $border;
