--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/InsidePollingPlace/InsidePollingPlace.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/InsidePollingPlace/InsidePollingPlace.scss
@@ -6,6 +6,10 @@
   background-color: $background;
   height: 100vh;
 
+  // .inside-content-container {
+
+  // }
+
   .module-navigation {
     background-color: $border;
     position: absolute;
