added sass styling

--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Disclaimer/Disclaimer.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Disclaimer/Disclaimer.scss
@@ -2,9 +2,26 @@
 
 .Disclaimer {
   display: block;
+  font-family: $font-stack;
   color: $text;
   background-color: $background;
   height: 100vh;
+
+  h2 {
+    padding: $header-padding;
+    font-weight: $header-weight;
+    font-size: $header-size;
+    color: $teal;
+  }
+
+  h5 {
+    font-size: $body-text-size;
+    padding: $body-text-padding;
+  }
+
+  label {
+    padding: 10px;
+  }
 
   .disclaimer-image {
     width: auto;
