--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Register/Register.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Register/Register.scss
@@ -6,6 +6,18 @@
   background-color: $background;
   height: 100vh;
 
+  h2 {
+    padding: $header-padding;
+    font-weight: $header-weight;
+    font-size: $header-size;
+    color: $teal;
+  }
+
+  h5 {
+    font-size: $body-text-size;
+    padding: $body-text-padding;
+  }
+
   .rollover-container {
     display: flex;
     background-color: $green;
