--- a/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
+++ b/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
@@ -6,6 +6,20 @@
   background-color: $background;
   height: 100vh;
 
+  
+  h2 {
+    padding: $header-padding;
+    font-weight: $header-weight;
+    font-size: $header-size;
+    color: $teal;
+  }
+
+  h5 {
+    font-size: $body-text-size;
+    padding: $body-text-padding;
+  }
+
+
   .module-cards-container {
     background-color: $purple;
     display: flex;
