--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/OutsidePollingPlace/OutsidePollingPlace.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/OutsidePollingPlace/OutsidePollingPlace.scss
@@ -6,6 +6,18 @@
   background-color: $background;
   height: 100vh;
 
+  h2 {
+    padding: $header-padding;
+    font-weight: $header-weight;
+    font-size: $header-size;
+    color: $teal;
+  }
+
+  h5 {
+    font-size: $body-text-size;
+    padding: $body-text-padding;
+  }
+
   .module-navigation {
     background-color: $border;
     position: absolute;
@@ -14,6 +26,6 @@
   }
 
   .outside-image {
-    width: 50%;
+    width: 35%;
   }
 }
