--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Sticker/Sticker.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Sticker/Sticker.scss
@@ -6,6 +6,19 @@
   background-color: $background;
   height: 100vh;
 
+  h2 {
+    padding: $header-padding;
+    font-weight: $header-weight;
+    font-size: $header-size;
+    color: $teal;
+  }
+
+  h5 {
+    font-size: $body-text-size;
+    padding: $body-text-padding;
+  }
+
+
   .sticker-img {
     width:50%
   }
