--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/VotingMachine/VotingMachine.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/VotingMachine/VotingMachine.scss
@@ -6,6 +6,22 @@
   background-color: $background;
   height: 100vh;
 
+  h2 {
+    padding: $header-padding;
+    font-weight: $header-weight;
+    font-size: $header-size;
+    color: $teal;
+  }
+
+  h5 {
+    font-size: $body-text-size;
+    padding: $body-text-padding;
+  }
+
+  img {
+    width: 25%;
+  }
+
   .module-navigation {
     background-color: $border;
     position: absolute;
