--- a/whatisvotinglike.ui/src/styles/_variables.scss
+++ b/whatisvotinglike.ui/src/styles/_variables.scss
@@ -13,3 +13,12 @@ $orange: #b38b43;
 $answer-green: #038626;
 $answer-red: #b14a4e;
 $button-blue: #174dc9;
+
+$font-stack: "Helvetica", sans-serif;
+
+$header-size: 4rem;
+$header-weight: bolder;
+$header-padding: 25px 0 50px 0;
+
+$body-text-padding: 0 3% 1% 3%; 
+$body-text-size: 1.5rem;
