--- a/whatisvotinglike.ui/src/styles/_variables.scss
+++ b/whatisvotinglike.ui/src/styles/_variables.scss
@@ -22,3 +22,21 @@ $header-padding: 25px 0 50px 0;
 
 $body-text-padding: 0 3% 1% 3%; 
 $body-text-size: 1.5rem;
+
+// navigation
+$nav-button-width: 5%;
+$nav-btn-font-weight: bold;
+
+// active nav buttons
+$active-nav-button-background-color: $teal;
+$active-nav-button-text-color: #fffafa;
+
+// hovered nav buttons
+$hover-active-nav-button-background-color: #fffafa;
+$hover-active-nav-button-text-color: $teal;
+
+
+// disabled nav buttons
+$disabled-nav-button-background-color: $background;
+$disabled-nav-button-text-color: #585858;
+$disabled-cursor: no-drop;
