--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
@@ -2,6 +2,9 @@
 
 .Intro {
   display: block;
+  font-family: $font-stack;
+  background-color: $background;
+  height: 100vh;
   color: $text;
 
   h2 {
