--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Register/Register.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Register/Register.scss
@@ -2,8 +2,9 @@
 
 .Register {
   display: block;
-  color: $text;
+  font-family: $font-stack;
   background-color: $background;
+  color: $text;
   height: 100vh;
 
   h2 {
@@ -42,5 +43,42 @@
     position: absolute;
     bottom: 2rem;
     width: 100%;
+    padding-right: 2rem;
+
+    .active-next-button {
+      background-color: $active-nav-button-background-color;
+      color: $active-nav-button-text-color;
+      font-weight: $nav-btn-font-weight;
+      width: $nav-button-width;
+    }
+
+    .active-next-button:hover {
+      background-color: $hover-active-nav-button-background-color;
+      color: $hover-active-nav-button-text-color;
+      font-weight: $nav-btn-font-weight;
+      width: $nav-button-width;
+    }
+
+    .disabled-next-button {
+      background-color: $disabled-nav-button-background-color;
+      color: $disabled-nav-button-text-color;
+      font-weight: $nav-btn-font-weight;
+      width: $nav-button-width;
+      cursor: $disabled-cursor;
+    }
+
+    .previous-button {
+      background-color: $active-nav-button-background-color;
+      color: $active-nav-button-text-color;
+      font-weight: $nav-btn-font-weight;
+      width: $nav-button-width;
+    }
+
+    .previous-button:hover {
+      background-color: $hover-active-nav-button-background-color;
+      color:$hover-active-nav-button-text-color;
+      font-weight: $nav-btn-font-weight;
+      width: $nav-button-width;
+    }
   }
 }
