--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
@@ -16,6 +16,12 @@
     padding: $body-text-padding;
   }
 
+  .register-button-container {
+    padding-top: 3rem;
+    display: flex;
+    justify-content: space-around;
+  }
+
   .complete-training-button {
     background-color: $green;
     &:hover {
