footer positioning wip

--- a/whatisvotinglike.ui/src/components/shared/Footer/Footer.scss
+++ b/whatisvotinglike.ui/src/components/shared/Footer/Footer.scss
@@ -4,7 +4,8 @@
   display: block;
   font-family: $font-stack;
   background-color: $teal;
-  position: absolute;
+  position: fixed;
+  // position: absolute;
   bottom: 0;
   width: 100%;
 
