--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Disclaimer/Disclaimer.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Disclaimer/Disclaimer.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/variables';
 
 .Disclaimer {
-  display: block;
-  font-family: $font-stack;
-  color: $text;
-  background-color: $background;
-  height: 100vh;
+  @include component;
+
+  .disclaimer-container {
+    @include component-container;
+  }
 
   h2 {
     padding: $header-padding;
@@ -29,14 +29,7 @@
 
   .module-navigation {
     background-color: $border;
-    position: static;
-    // position: absolute;
-    // position: -webkit-sticky; /* Safari */
-    // position: sticky;
-    // bottom: 0;
-    // // bottom: 3.5rem;
     width: 100%;
-    // padding-right: 2rem;
 
     .active-next-button {
       background-color: $active-nav-button-background-color;
