--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/variables';
 
 .Intro {
-  display: block;
-  font-family: $font-stack;
-  background-color: $background;
-  height: 100vh;
-  color: $text;
+  @include component;
+
+  .intro-container {
+    @include component-container;
+  }
 
   h2 {
     padding: $header-padding;
@@ -31,10 +31,6 @@
   .module-navigation {
     background-color: $border;
     position: static;
-    // position: absolute;
-    // bottom: 3.5rem;
-    // width: 100%;
-    // padding-right: 2rem;
 
     .active-next-button {
       background-color: $active-nav-button-background-color;
