added container div and styling with scss mixins to the Outside component

--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/OutsidePollingPlace/OutsidePollingPlace.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/OutsidePollingPlace/OutsidePollingPlace.scss
@@ -1,11 +1,16 @@
 @import '../../../styles/variables';
 
 .OutsidePollingPlace {
-  display: block;
-  font-family: $font-stack;
-  color: $text;
-  background-color: $background;
-  height: 100vh;
+  @include component;
+  // display: block;
+  // font-family: $font-stack;
+  // color: $text;
+  // background-color: $background;
+  // height: 100vh;
+
+  .outside-container {
+    @include component-container;
+  }
 
   h2 {
     padding: $header-padding;
@@ -21,8 +26,6 @@
 
   .module-navigation {
     background-color: $border;
-    position: absolute;
-    bottom: 3.5rem;
     width: 100%;
     padding-right: 2rem;
 
