--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/CheckIn/CheckIn.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/CheckIn/CheckIn.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/variables';
 
 .CheckIn {
-  display: block;
-  font-family: $font-stack;
-  background-color: $background;
-  color: $text;
-  height: 100vh;
+  @include component;
+
+  .checkin-container {
+    @include component-container;
+  }
   
   .checkin-content-container {
     display: flex;
@@ -35,10 +35,7 @@
 
   .module-navigation {
     background-color: $border;
-    position: absolute;
-    bottom: 3.5rem;
     width: 100%;
-    padding-right: 2rem;
 
     .active-next-button {
       background-color: $active-nav-button-background-color;
