--- a/whatisvotinglike.ui/src/styles/_variables.scss
+++ b/whatisvotinglike.ui/src/styles/_variables.scss
@@ -62,3 +62,48 @@ $disabled-cursor: no-drop;
   min-width: 1200px;
   max-width: 1200px;
 }
+
+//navbar mixins
+@mixin navbar {
+    background-color: $border;
+    width: 100%;
+    .btn {
+      margin: .50rem;
+    }
+}
+
+@mixin active-next-button {
+    background-color: $active-nav-button-background-color;
+    color: $active-nav-button-text-color;
+    font-weight: $nav-btn-font-weight;
+    width: $nav-button-width;
+}
+
+@mixin active-next-button-hover {
+  background-color: $hover-active-nav-button-background-color;
+  color: $hover-active-nav-button-text-color;
+  font-weight: $nav-btn-font-weight;
+  width: $nav-button-width;
+}
+
+@mixin disabled-next-button {
+  background-color: $disabled-nav-button-background-color;
+  color: $disabled-nav-button-text-color;
+  font-weight: $nav-btn-font-weight;
+  width: $nav-button-width;
+  cursor: $disabled-cursor;
+}
+
+@mixin previous-button {
+  background-color: $active-nav-button-background-color;
+  color: $active-nav-button-text-color;
+  font-weight: $nav-btn-font-weight;
+  width: $nav-button-width;
+}
+
+@mixin previous-button-hover {
+  background-color: $hover-active-nav-button-background-color;
+  color:$hover-active-nav-button-text-color;
+  font-weight: $nav-btn-font-weight;
+  width: $nav-button-width;
+}
