added background squares

--- a/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
+++ b/whatisvotinglike.ui/src/components/commonComponents/Home/Home.scss
@@ -4,6 +4,8 @@
   display: block;
   color: $text;
   background-color: $background;
+  background-image: url('../../../images/blue-bkg-square-1.png');
+  background-repeat: repeat;
   height: 100vh;
 
   
