--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Conclusion/Conclusion.scss
@@ -3,6 +3,8 @@
 .Conclusion {
   display: block;
   color: $text;
+  background-image: url('../../../images/blue-bkg-square-1.png');
+  background-repeat: repeat;
 
   h2 {
     padding: $header-padding;
