--- a/whatisvotinglike.ui/src/components/shared/ConclusionCard/ConclusionCard.scss
+++ b/whatisvotinglike.ui/src/components/shared/ConclusionCard/ConclusionCard.scss
@@ -2,5 +2,8 @@
 
 .ConclusionCard {
   display: block;
-  background-color: $dark-purple;
+  background-color: $border;
+  padding: 1rem;
+  border: 5px $background solid;
+  // height: 25vh;
 }
