changed content and styling of Conclusion and conclusionCards within

--- a/whatisvotinglike.ui/src/components/shared/ConclusionCard/ConclusionCard.scss
+++ b/whatisvotinglike.ui/src/components/shared/ConclusionCard/ConclusionCard.scss
@@ -2,8 +2,17 @@
 
 .ConclusionCard {
   display: block;
+  flex-direction: column;
   background-color: $border;
   padding: 1rem;
   border: 5px $background solid;
-  // height: 25vh;
+  height: 10rem;
+
+  .btn {
+    background-color: $teal;
+    &:hover {
+      color: $text;
+      background-color: $dark-purple;
+    }
+  }
 }
