--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Register/Register.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Register/Register.scss
@@ -34,13 +34,13 @@
   }
 
   .rollover-message-container {
-    background-color: $border;
+    background-color: $background;
     justify-content: center;
 
     .revealed-text {
       color: $text;
-      margin: 2rem;
-      padding: 1% 10% 1% 10%;
+      margin: 1rem;
+      padding: 1.5% 10% 1% 10%;
     }
   }
 
