added image from props and resized for Inside component

--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/InsidePollingPlace/InsidePollingPlace.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/InsidePollingPlace/InsidePollingPlace.scss
@@ -19,6 +19,10 @@
     padding: $body-text-padding;
   }
 
+  .polling-location-image {
+    width: 50%;
+  }
+
   .module-navigation {
     @include navbar;
 
