added container div for dynamicAnswer and added padding

--- a/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
+++ b/whatisvotinglike.ui/src/components/whatIsVotingLikeComponents/Intro/Intro.scss
@@ -28,6 +28,10 @@
     display: flex;
   }
 
+  .dynamic-response-container {
+    padding-top: 1rem;
+  }
+
   .module-navigation {
     @include navbar;
 
